# advanced-security

./: CHANGELOG.md  CONTRIBUTING.md  README.md  autogen.sh  configure.ac  test_gatekeeper.txt
.github/: AGENTIC_DEV_README.md  DOCUMENTATION_GUIDE.md  README.md  copilot-instructions.md
.github/agents/: advanced-security.agent.md
.github/instructions/: build-system.instructions.md  c-embedded.instructions.md  cpp-testing.instructions.md  shell-scripts.instructions.md
.github/knowledge/: reference-data.md
.github/prompts/: generate-all-docs.prompt.md  generate-api-reference.prompt.md  generate-architecture.prompt.md  generate-developer-playbook.prompt.md  generate-docs-readme.prompt.md  generate-feature-catalog.prompt.md  generate-onboarding.prompt.md  generate-tr181-matrix.prompt.md  generate-troubleshooting.prompt.md  generate-workflows.prompt.md
.github/skills/code-review/: SKILL.md
.github/skills/code-review/references/: checklist.md  common-pitfalls.md  safety-patterns.md
.github/skills/incident-analysis/: SKILL.md
.github/skills/quality-checker/: SKILL.md
.github/skills/safety-analyzer/: SKILL.md
.github/workflows/: L1-tests.yml  auto-backport.yml  gatekeeper.yml  native-build.yml
config/: TR181-AdvSecurity.xml
cov_docker_script/: component_config.json  configure_options.conf
docs/: DATA_FLOW.md  README.md  SECURITY_MODEL.md  TOOLS.md  architecture.md  developer-playbook.md  onboarding.md  troubleshooting.md  workflows.md
docs/reference/: api-reference.md  feature-catalog.md  tr181-matrix.md
scripts/: advsec.sh  advsec_cpu_mem_recovery.sh  advsec_log_fp_status.sh  start_adv_security.sh
source/: Makefile.am
source/AdvSecurityDml/: Makefile.am  advsecurity_helpers.c  advsecurity_param.c  cosa_adv_security_dml.c  cosa_adv_security_dml.h  cosa_adv_security_internal.c  cosa_adv_security_internal.h  cosa_adv_security_webconfig.c  cujoagent_dcl_api.c  cujoagent_dcl_api.h  plugin_main.c
source/AdvSecuritySsp/: Makefile.am  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/test/: Makefile.am  run_ut.sh
source/test/CcspAdvSecurityDmlTest/: CcspAdvSecurityDmlTest.cpp  CcspAdvSecurityInternalTest.cpp  CcspAdvSecurityMock.cpp  CcspAdvSecurityMock.h  CcspAdvSecurityWebconfigTest.cpp  Makefile.am  gtest_main.cpp
